# autonomous_navigation_ws

./: .gitignore  README.md  environment.yml  set.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
src/gazebo_simulator/: CMakeLists.txt  README.md  package.xml
src/gazebo_simulator/launch/: robot_world.launch.py
src/gazebo_simulator/src/: gazebo_simulator_node.cpp
src/gazebo_simulator/urdf/: diffbot.gazebo  diffbot.urdf  diffbot.urdf.xacro
src/gazebo_simulator/worlds/: simulator.world
src/mc_localizer/: CMakeLists.txt  DEVELOPMENT.md  README.md  package.xml
src/mc_localizer/include/mc_localizer/: histogram.hpp  mae_classifier.hpp  mc_localizer.hpp  mc_localizer_ros.hpp  particle.hpp  point.hpp  pose.hpp
src/mc_localizer/src/: mc_localizer.cpp  mc_localizer_node.cpp  mc_localizer_ros.cpp
src/monte_carlo_localization/: CMakeLists.txt  README.md  package.xml
src/monte_carlo_localization/include/monte_carlo_localization/: histogram.hpp  monte_carlo_localization_ros.hpp  pose.hpp
src/monte_carlo_localization/src/: monte_carlo_localization_node.cpp  monte_carlo_localization_ros.cpp
