<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mc_localizer</name>
  <version>0.0.1</version>
  <description>ROS2 Humble Package of Monte Carlo Localization for Mobile Robot with 2D LiDAR and IMU</description>
  <maintainer email="prepared7913@gmail.com">Sewon Kim</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
</package>